[package]
name = "local-sqs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0", features = ["serde"] }
dashmap = "6"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
